force-app/main/default/objects/Customer_Product__c/Customer_Product__c.object-meta.xml
<CustomObject>
    <label>Customer Product</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Customer Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>