force-app/main/default/objects/Customer_Product__c/fields/affiliate_added__c.field-meta.xml
<CustomField>
    <fullName>affiliate_added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliate Added</label>
    <type>Checkbox</type>
</CustomField>