force-app/main/default/objects/Customer_Product__c/fields/Agreement_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Accepted</label>
    <type>Checkbox</type>
</CustomField>