force-app/main/default/objects/Customer_Product__c/fields/Agreement_Accepted_Time__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Accepted_Time__c</fullName>
    <label>Agreement Accepted Time</label>
    <type>DateTime</type>
</CustomField>