force-app/main/default/objects/Customer_Product__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Customer Products</relationshipLabel>
    <relationshipName>Customer_Products</relationshipName>
    <type>Lookup</type>
</CustomField>