force-app/main/default/objects/Customer_Product__c/fields/Asset_Account__c.field-meta.xml
<CustomField>
    <fullName>Asset_Account__c</fullName>
    <formula>Asset__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Account</label>
    <type>Text</type>
</CustomField>