force-app/main/default/objects/Customer_Product__c/fields/auto_renew__c.field-meta.xml
<CustomField>
    <fullName>auto_renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>