force-app/main/default/objects/Customer_Product__c/fields/Chargify_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Chargify_Subscription_ID__c</fullName>
    <label>Chargify Subscription ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>