force-app/main/default/objects/Customer_Product__c/fields/Convert_from_Trial__c.field-meta.xml
<CustomField>
    <fullName>Convert_from_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert from Trial</label>
    <type>Checkbox</type>
</CustomField>