force-app/main/default/objects/Customer_Product__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>for DB syncing</description>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>