force-app/main/default/objects/Customer_Product__c/fields/Date_Deassigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Deassigned__c</fullName>
    <label>Date Deassigned</label>
    <type>Date</type>
</CustomField>