force-app/main/default/objects/Customer_Product__c/fields/Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_Purchased__c</fullName>
    <label>Date Purchased</label>
    <type>DateTime</type>
</CustomField>