force-app/main/default/objects/Customer_Product__c/fields/email_notify__c.field-meta.xml
<CustomField>
    <fullName>email_notify__c</fullName>
    <label>Email Notify</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>null</fullName>
            </value>
            <value>
                <fullName>skip</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>