force-app/main/default/objects/Customer_Product__c/fields/etoolkit_override_status__c.field-meta.xml
<CustomField>
    <fullName>etoolkit_override_status__c</fullName>
    <label>Etoolkit Override Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>renews</fullName>
            </value>
            <value>
                <fullName>expire_at_term</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>