force-app/main/default/objects/Customer_Product__c/fields/expiration_date__c.field-meta.xml
<CustomField>
    <fullName>expiration_date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>