force-app/main/default/objects/Customer_Product__c/fields/Expiration_Override__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiration Override</label>
    <type>Checkbox</type>
</CustomField>