force-app/main/default/objects/Customer_Product__c/fields/Expiration_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Override_Date__c</fullName>
    <label>Expiration Override Date</label>
    <type>Date</type>
</CustomField>