force-app/main/default/objects/Customer_Product__c/fields/First_Accessed__c.field-meta.xml
<CustomField>
    <fullName>First_Accessed__c</fullName>
    <label>First Accessed</label>
    <type>DateTime</type>
</CustomField>