force-app/main/default/objects/Customer_Product__c/fields/Last_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Last_Accessed__c</fullName>
    <label>Last Accessed</label>
    <type>DateTime</type>
</CustomField>