force-app/main/default/objects/Customer_Product__c/fields/Nav_Override_Status__c.field-meta.xml
<CustomField>
    <fullName>Nav_Override_Status__c</fullName>
    <label>Nav Override Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>