force-app/main/default/objects/Customer_Product__c/fields/Nav_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Nav_Subscription_ID__c</fullName>
    <label>Nav Subscription ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>