force-app/main/default/objects/Customer_Product__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <label>Parent ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>