force-app/main/default/objects/Customer_Product__c/fields/Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Access</label>
    <referenceTo>Portal_Access__c</referenceTo>
    <relationshipLabel>Customer Products</relationshipLabel>
    <relationshipName>Customer_Products</relationshipName>
    <type>Lookup</type>
</CustomField>