force-app/main/default/objects/Customer_Product__c/fields/Portal_Access_Portal_DB_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Portal_DB_ID__c</fullName>
    <label>Portal Access Portal DB ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>