force-app/main/default/objects/Customer_Product__c/fields/Product_Grouper_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Grouper_ID__c</fullName>
    <label>Product Grouper ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>