force-app/main/default/objects/Customer_Product__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>