force-app/main/default/objects/Customer_Product__c/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Customer Products</relationshipLabel>
    <relationshipName>Customer_Products</relationshipName>
    <type>Lookup</type>
</CustomField>