force-app/main/default/objects/Customer_Product__c/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <label>Updated By</label>
    <type>TextArea</type>
</CustomField>