force-app/main/default/objects/Customer_Product__c/validationRules/Portal_Access_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Portal_Access_required</fullName>
    <active>false</active>
    <description>Portal Access id is required for customer product</description>
    <errorConditionFormula>ISBLANK( Portal_Access__c )</errorConditionFormula>
    <errorMessage>Portal Access is required</errorMessage>
</ValidationRule>