force-app/main/default/objects/Customer_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Portal_Access__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>IH</value>
    </filters>
    <label>All</label>
</ListView>