force-app/main/default/objects/Customer_Product__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>expiration_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>