force-app/main/default/objects/Customer_Product__c/listViews/Tools_modified_today.listView-meta.xml
<ListView>
    <fullName>Tools_modified_today</fullName>
    <columns>NAME</columns>
    <columns>Portal_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Modified_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Tools modified today</label>
</ListView>